--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600&display=swap" rel="stylesheet">
     <title>Yakimeshi Roll</title>
 </head>
 
 <body>
-    <h1>Yakimeshi Roll</h1>
+    <section class="logo-section">
+        <img class="logo-image" src="/images/SVG/logo.svg" alt="">
+    </section>
     <div class="container-items">
         <div class="entradas" id="entradas">
-            <h2>Entradas</h2>
+            <div class="title-box">
+                <h2>Entradas</h2>
+            </div>
         </div>
         <div class="platos-fuertes">
             <h2>Platos Fuertes</h2>
