--- a/index.html
+++ b/index.html
@@ -22,34 +22,42 @@
             </div>
         </div>
         <div class="platos-fuertes">
-            <h2>Platos Fuertes</h2>
+            <div class="title-box">
+                <h2>Platos Fuertes</h2>
+            </div>
             <div id="arroz" class="descripciones"></div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Proteina</th>
-                        <th scope="col">Personal</th>
-                        <th scope="col">Familiar</th>
-                    </tr>
-                </thead>
-                <tbody id="arroz-precios">
-                </tbody>
-            </table>
+            <div class="table-box">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Proteina</th>
+                            <th scope="col">Personal</th>
+                            <th scope="col">Familiar</th>
+                        </tr>
+                    </thead>
+                    <tbody id="arroz-precios">
+                    </tbody>
+                </table>
+            </div>
             <div id="pasta" class="descripciones"></div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Proteina</th>
-                        <th scope="col">Personal</th>
-                        <th scope="col">Familiar</th>
-                    </tr>
-                </thead>
-                <tbody id="pasta-precios">
-                </tbody>
-            </table>
+            <div class="table-box">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Proteina</th>
+                            <th scope="col">Personal</th>
+                            <th scope="col">Familiar</th>
+                        </tr>
+                    </thead>
+                    <tbody id="pasta-precios">
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div id="sushi" class="sushi">
-            <h2>Sushi</h2>
+            <div class="title-box">
+                <h2>Sushi</h2>
+            </div>
         </div>
     </div>
     <script src="js/main.js"></script>
