Incluido los meta tags

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <title>Meta Tags — Preview, Edit and Generate</title>
     <meta name="title" content="Meta Tags — Preview, Edit and Generate">
     <meta name="description" content="Yakimeshi roll es un restaurante de comida japonesa ubicado en el barrio turingía en la localidad de suba, en la dirección Calle 152 # 103c-27"/>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Yakimeshi Roll - Tepanyaki Sushi">
+    <meta property="og:description" content="Yakimeshi roll es un restaurante de comida japonesa ubicado en el barrio turingía en la localidad de suba, en la dirección Calle 152 # 103c-27">
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
 </head>
 
 <body>
