--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <li class="group-item"><a href="#ofertas">Ofertas</a></li>
             </ul>
         </nav>
+        <div class="pdf-button">
+            <a href="/files/Carta2021.pdf" target="_blank"><p>Descargar en PDF</p></a>
+        </div>
         <section class="entradas" id="entradas">
             <div class="title-box">
                 <h2>Entradas</h2>
@@ -139,6 +142,14 @@
             </div>
         </section>
     </div>
+    <footer class="footer">
+        <p>Horario de atención:
+            Lunes a jueves: 12m a 8 p.m
+            Viernes y Sabado: 12m a 9 p.m
+            Domingos y festivos: 12m a 6 p.m</p>
+        <p>Calle 152#103c-27</p>
+        <p>Whatsapp: 313 4775237</p>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 
