Actualización de precios 2022

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </ul>
         </nav>
         <div class="pdf-button">
-            <a href="/files/Carta2021.pdf" target="_blank"><p>Descargar en PDF</p></a>
+            <a href="/files/CartaYakimeshi2022.pdf" target="_blank"><p>Descargar en PDF</p></a>
         </div>
         <section class="entradas" id="entradas">
             <div class="title-box">
